2004-03-25  Philip Blundell  <philb@gnu.org>

	* Version 0.15 released.
	
2004-03-25  Philip Blundell  <philb@gnu.org>

	* Makefile: Bring up to modern standards vis-a-vis PACKAGE_CFLAGS,
	etc.
	(install-devel): Correct path to headers.

2004-03-06  Philip Blundell  <philb@gnu.org>

	* Version 0.14 released.

2004-03-05  Philip Blundell  <philb@gnu.org>

	* event-db.c (event_db_write): Only write out description and
	summary if not NULL.

2004-02-23  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * Version 0.13 released.
                                                                                
2004-02-23  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * event-db.c: once again, rework recur slightly 
                                                                                
2004-02-22  Phil Blundell  <pb@nexus.co.uk>

	* Version 0.12 released.

2004-02-21  Phil Blundell  <pb@nexus.co.uk>

	* event-db.c (event_db_write): Write out categories.
	(load_details_callback): Read in categories;
	* gpe/event-db.h (struct event_details_s): Add categories.

2004-02-21  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * Version 0.11 released.
                                                                                
2004-02-21  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * event-db.h: re-add SECONDS_IN_DAY to fix daily recur
                                                                                
2004-02-20  Joseph J. McCarthy <mccarthy@engrng.pitt.edu>
                                                                                
        * Version 0.09 released. 