@@ -1,3 +1,7 @@
+2004-09-21  Florian Boor  <florian@kernelconcepts.de>
+
+	* event-db.c (event_db_write): Added re-sorting of lists.
+
 2004-03-25  Philip Blundell  <philb@gnu.org>
 
 	* Version 0.15 released.
